--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     _rphConfig.push(["setAppKey", "key_vtmm2snuajd7ysplaudrduvq" ]);
   </script>
   
-    <h1>Web Page</h1>
+    <h1>Welcome!</h1>
     <div id="loginStatus">Checking login status...</div>
     <button id="loginButton" onclick="handleAuth()">Sign In</button>
 
