--- a/appclip/index.html
+++ b/appclip/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rownd Auth Test</title>
+    <title>App Clip page</title>
     <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip">
 </head>
 <body>
@@ -19,14 +19,6 @@
         Sign In
     </button>
 
-    <h1>Test Links</h1>
-    <ul>
-        <h1>Test Links</h1>
-        <ul>
-            <li><a href="https://ios-rownd-test-site.pages.dev/appclip?param1=value1">Test Link 1</a></li>
-            <li><a href="https://yourdomain.com/path?token=123&email=test@example.com">Test Link 2</a></li>
-        </ul>
-    </ul>
 
     <!-- Rownd initialization script -->
     <script>
