--- a/appclip/index.html
+++ b/appclip/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>App Clip page</title>
-    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip">
+    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip,app-clip-display=card">
 </head>
 <body>
     <h1>Welcome!</h1>
