--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Rownd Auth Test</title>
-    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip">
+    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip,app-clip-display=card">
 </head>
 <body>
     <h1>Welcome!</h1>
@@ -23,8 +23,8 @@
     <ul>
         <h1>Test Links</h1>
         <ul>
-            <li><a href="https://ios-rownd-test-site.pages.dev/appclip?param1=value1">Test Link 1</a></li>
-            <li><a href="https://yourdomain.com/path?token=123&email=test@example.com">Test Link 2</a></li>
+            <li><a href="https://ios-rownd-test-site.pages.dev/appclip?_clipPath=/appclip">Test Link 1</a></li>
+            <li><a href="https://ios-rownd-test-site.pages.dev/appclip?_clipPath=/appclip">Test Link 2</a></li>
         </ul>
     </ul>
 
