--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <h1>Test Links</h1>
     <ul>
         <li>
-            <a href="https://ios-rownd-test-site.pages.dev/appclip/test?_clipPath=/appclip/test">Test Link 1</a>
+            <a href="https://ios-rownd-test-site.pages.dev/appclip?_clipPath=/appclip">Test Link 1</a>
         </li>
         <li>
-            <a href="https://ios-rownd-test-site.pages.dev/appclip/auth?_clipPath=/appclip/auth">Test Link 2</a>
+            <a href="https://ios-rownd-test-site.pages.dev/appclip?_clipPath=/appclip&token=123">Test Link 2</a>
         </li>
     </ul>
 
