--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         </li>
     </ul>
 
+    <div id="debug">
+        <p>User Agent: <script>document.write(navigator.userAgent)</script></p>
+        <p>Protocol: <script>document.write(window.location.protocol)</script></p>
+    </div>
+
+    <p>
+        <a href="appclip://ios-rownd-test-site.pages.dev/appclip">
+            Launch App Clip (Direct)
+        </a>
+    </p>
+
     <!-- Rownd initialization script -->
     <script>
         !function () { 
