--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
     </li>
 </ul>
 
+<h1>App Clip Test Links</h1>
+<ul>
+    <li>
+        <a href="/appclip">Direct Path</a>
+    </li>
+    <li>
+        <a href="/appclip?_clipPath=/appclip">With Clip Path</a>
+    </li>
+</ul>
+
     <div id="debug">
         <p>User Agent: <script>document.write(navigator.userAgent)</script></p>
         <p>Protocol: <script>document.write(window.location.protocol)</script></p>
