--- a/appclip/index.html
+++ b/appclip/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>App Clip Launch Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip,app-clip-display=card">
+    <meta charset="UTF-8">
+    <title>App Clip Test</title>
+    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip">
 </head>
 <body>
-    <h1>Launch App Clip</h1>
-    <p>This page should trigger the App Clip card.</p>
-    
-    <!-- Debug Info -->
-    <div style="margin-top: 20px; font-family: monospace;">
-        <p>Path: <script>document.write(window.location.pathname)</script></p>
-        <p>Search: <script>document.write(window.location.search)</script></p>
-        <p>UserAgent: <script>document.write(navigator.userAgent)</script></p>
-    </div>
+    <h1>App Clip Test</h1>
+    <!-- No additional content needed -->
 </body>
 </html>
