--- a/appclip/index.html
+++ b/appclip/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>App Clip Test</title>
-    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip">
-</head>
+    <head>
+        <title>Rownd Auth Test</title>
+        <meta name="apple-itunes-app" content="app-clip-bundle-id=rownd.rownd-ios-demo.Clip,app-clip-display=card">
+    </head>
 <body>
     <h1>App Clip Test</h1>
     <!-- No additional content needed -->
