--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Rownd Auth Test</title>
-    <meta name="apple-itunes-app" content="app-clip-bundle-id=io.rownd.RowndAuthTest.Clip,app-clip-display=card">
+    <meta name="apple-itunes-app" content="app-clip-bundle-id=rownd.rownd-ios-demo.Clip,app-clip-display=card">
 </head>
 <body>
     <h1>Welcome!</h1>
