--- a/appclip/index.html
+++ b/appclip/index.html
@@ -8,4 +8,10 @@
     <h1>App Clip Test</h1>
     <!-- No additional content needed -->
 </body>
+
+<div style="margin: 20px; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
+    <h2>Try our App Clip</h2>
+    <p>Get a quick preview of our app's features</p>
+    <a href="https://ios-rownd-test-site.pages.dev/clip">Launch App Clip</a>
+</div>
 </html>
