--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <ul>
     <!-- Format 1: Basic -->
     <li>
-        <a href="https://ios-rownd-test-site.pages.dev/appclip?_clipPath=/appclip">
-            Basic Test Link
+        <a href="https://ios-rownd-test-site.pages.dev/appclip?name=John&id=123&type=test">
+           Parameters
         </a>
     </li>
 
     <!-- Format 2: With trailing slash -->
     <li>
-        <a href="https://ios-rownd-test-site.pages.dev/appclip/?_clipPath=/appclip">
-            Test with trailing slash
+        <a href="https://ios-rownd-test-site.pages.dev?name=John&id=123&type=test">
+            Base with Parameters
         </a>
     </li>
 
